# unidata-blocks

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yaml  publish.yml  python-package.yml  test.yaml  test.yml
src/unidata_blocks/: __init__.py
src/unidata_blocks/unidata/: languages.txt
src/unidata_blocks/unidata/i18n/: zh-cn.txt
src/unidata_blocks/unidata/translations/: zh-Hans.txt  zh-Hant.txt  zh-hans.txt
tests/: test_.py  test_block.py  test_query.py
tools/: __init__.py  create_i18n_file.py  update.py  update_blocks.py  update_i18n_files.py
