[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "unidata-blocks"
version = "0.0.22"
description = "A library that helps query Unicode blocks by Blocks.txt"
readme = "README.md"
license = "MIT"
authors = [
    { name = "TakWolf" },
]
maintainers = [
    { name = "TakWolf" },
]
keywords = ["unicode"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "langcodes>=3.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "httpx[http2]>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/TakWolf/unidata-blocks"
Source = "https://github.com/TakWolf/unidata-blocks"
Issues = "https://github.com/TakWolf/unidata-blocks/issues"
